Update docs for demo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         })
         .click(function(d){
           console.log(d);
-          
+
           // Find previously selected, unselect
           d3.select(".selected").classed("selected", false);
           
@@ -270,7 +270,7 @@
                             "name": "Ikhtiyari",
                             "children": [
                               {"name": "Tam"},
-                              {"name": "kafi"},
+                              {"name": "Kafi"},
                               {"name": "Hasan"},
                               {"name": "Qabih"},
                               {"name": "Harakat `Aridh"}
