--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <title>Mindmap with D3.js demo</title>
+    <meta name="description" content="An experiment in building a reuseable mindmap using D3.js">
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
     <style type="text/css">
       .node circle {
